# foodcourt

./: .env.dev  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  prestart.sh  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
src/: routers.py
src/base/: classes.py  permissions.py  serializers.py
src/feed/: services.py  views.py
src/feed/management/commands/: addfake.py
src/followers/: serializers.py  views.py
src/followers/migrations/: 0001_initial.py
src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20210516_2251.py  0003_auto_20210519_1852.py
src/wall/: admin.py  models.py  serializers.py  views.py
src/wall/migrations/: 0001_initial.py  0002_alter_post_view_count.py
